# hpn-asset-optimizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
models/: .gitkeep
presets/: print.yaml  thumbnail.yaml  web.yaml
src/aopt/: __init__.py  __main__.py
src/aopt/ai/: __init__.py  models.py  privacy.py  rembg.py  smart_resize.py  upscale.py  variants.py
src/aopt/cli/: __init__.py  app.py  dashboard.py
src/aopt/config/: __init__.py  presets.py  settings.py
src/aopt/core/: __init__.py  batch.py  compressor.py  converter.py  processor.py
src/aopt/utils/: __init__.py  image_io.py  logging.py  metadata.py
tests/: conftest.py  test_batch.py  test_cli.py  test_compressor.py  test_converter.py
